// SPDX-FileCopyrightText: 2021-present Open Networking Foundation <info@opennetworking.org>
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package atomix.storage.protocol.rsm.value;

import "atomix/primitive/meta/object.proto";
import "gogoproto/gogo.proto";

message ValueState {
    atomix.primitive.meta.ObjectMeta meta = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    bytes value = 2;
}
